--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -25,4 +25,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Signin" />
+
+    <TextView
+        android:id="@+id/tv_to_sign_up"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:padding="8dp"
+        android:text="Sign Up"
+        android:textStyle="bold" />
 </LinearLayout>
