--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,7 +3,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/new_game"
+        android:id="@+id/create_item"
         android:title="Create Link"
         android:icon="@drawable/ic_trending_down_black_24dp"
         app:showAsAction="always" />
